--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "yoeunes/toastr": "^3.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
