--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "power-components/livewire-powergrid": "^6.3",
         "yoeunes/toastr": "^3.1"
     },
     "require-dev": {
