--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.10.1",
         "yajra/laravel-datatables": "^12.0",
         "yajra/laravel-datatables-oracle": "^12.0",
-        "yoeunes/toastr": "^3.1"
+        "yoeunes/toastr": "^3.1",
+        "maximebf/debugbar": ">=1.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
